publish: 测试部署第二次
generated from commit cdafb54cf9d85508c003db8f5d9925e94237d571

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </style>
     <link href="stylesheets/screen-c9d8fa83.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all-e033bdd3.js"></script>
+      <script src="javascripts/all-03aa6e50.js"></script>
 
     <script>
       $(function() { setupCodeCopy(); });
@@ -296,7 +296,8 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-1e815a84.png" class="logo" alt="" />
+      <img src="images/logo-green.svn" class="logo" alt="" />
+
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="ruby">ruby</a>
