--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-green.svn" class="logo" alt="" />
+      <img src="images/logo-green-b987778f.png" class="logo" alt="" />
+
 
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
