--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@
                       <ul class="toc-list-h3">
                           <li>
                             <a href="#e2f1a8c28c" class="toc-h3 toc-link" data-title="目录三级">目录三级</a>
+                          </li>
+                          <li>
+                            <a href="#e2f1a8c28c-2" class="toc-h3 toc-link" data-title="目录三级">目录三级</a>
                               <ul class="toc-list-h4">
                                   <li>
                                     <a href="#b98f8e3e5b" class="toc-h4 toc-link" data-title="目录四级">目录四级</a>
@@ -509,9 +512,9 @@ includes: <br/>
 
 </span></code></pre></div>
 <p>This endpoint retrieves all kittens.</p>
-<h3 id='e2f1a8c28c'>目录三级</h3><h5 id='b98f8e3e5b'>目录四级</h5>
+<h3 id='e2f1a8c28c'>目录三级</h3><h3 id='e2f1a8c28c-2'>目录三级</h3>
 <p><code>GET /external-api/v2/shtvu/room/stat?room_code=11&amp;app_key=1234567890&amp;ts=1234567890</code></p>
-
+<h4 id='b98f8e3e5b'>目录四级</h4>
 <table><thead>
 <tr>
 <th>Parameter</th>
