--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@
                     <a href="#6b3c8f791d" class="toc-h2 toc-link" data-title="目录二级">目录二级</a>
                       <ul class="toc-list-h3">
                           <li>
-                            <a href="#e2f1a8c28c" class="toc-h3 toc-link" data-title="目录三级">目录三级</a>
+                            <a href="#d274eee8a1" class="toc-h3 toc-link" data-title="一">一</a>
                           </li>
                           <li>
-                            <a href="#e2f1a8c28c-2" class="toc-h3 toc-link" data-title="目录三级">目录三级</a>
+                            <a href="#1d5639f716" class="toc-h3 toc-link" data-title="二">二</a>
                           </li>
                           <li>
-                            <a href="#e2f1a8c28c-3" class="toc-h3 toc-link" data-title="目录三级">目录三级</a>
+                            <a href="#49ddb069d5" class="toc-h3 toc-link" data-title="三">三</a>
                           </li>
                       </ul>
                   </li>
@@ -510,9 +510,9 @@ includes: <br/>
 
 </span></code></pre></div>
 <p>This endpoint retrieves all kittens.</p>
-<h3 id='e2f1a8c28c'>目录三级</h3><h3 id='e2f1a8c28c-2'>目录三级</h3>
+<h3 id='d274eee8a1'>一</h3><h3 id='1d5639f716'>二</h3>
 <p><code>GET /external-api/v2/shtvu/room/stat?room_code=11&amp;app_key=1234567890&amp;ts=1234567890</code></p>
-<h3 id='e2f1a8c28c-3'>目录三级</h3>
+<h3 id='49ddb069d5'>三</h3>
 <table><thead>
 <tr>
 <th>Parameter</th>
