--- a/index.html
+++ b/index.html
@@ -491,106 +491,7 @@
 <td>Service Unavailable -- We&#39;re temporarily offline for maintenance. Please try again later.</td>
 </tr>
 </tbody></table>
-<h1 id='accounts'>accounts</h1><h1 id='accounts-authentication'>accounts-authentication</h1><h1 id='requests'>requests</h1><h1 id='requests-authentication'>requests-authentication</h1><h1 id='3801286cb3'>一级目录</h1>
-<p>Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-end
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use</p>
-<h2 id='cc07401a0b'>二级目录</h2>
-<p>Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-end</p>
-<h3 id='7adc0c0bbe'>三级目录</h3>
-<p>Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use</p>
-
-<p>configure :build do
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use</p>
-<h4 id='a5820edee3'>四级目录</h4>
-<p>Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-Build Configuration
-configure :build do
-We do want to hash woff and woff2 as there&#39;s a bug where woff2 will use
-configure :build do</p>
-
+<h1 id='accounts'>accounts</h1><h1 id='accounts-authentication'>accounts-authentication</h1><h1 id='requests'>requests</h1><h1 id='requests-authentication'>requests-authentication</h1><h1 id='3801286cb3'>一级目录</h1><h2 id='cc07401a0b'>二级目录</h2><h3 id='7adc0c0bbe'>三级目录</h3><h4 id='a5820edee3'>四级目录</h4>
       </div>
       <div class="dark-box">
           <div class="lang-selector">
