--- a/index.html
+++ b/index.html
@@ -328,16 +328,16 @@
               </ul>
           </li>
           <li>
-            <a href="#one" class="toc-h1 toc-link" data-title="one">one</a>
+            <a href="#3801286cb3" class="toc-h1 toc-link" data-title="一级目录">一级目录</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#two" class="toc-h2 toc-link" data-title="two">two</a>
+                    <a href="#cc07401a0b" class="toc-h2 toc-link" data-title="二级目录">二级目录</a>
                       <ul class="toc-list-h3">
                           <li>
-                            <a href="#three" class="toc-h3 toc-link" data-title="three">three</a>
+                            <a href="#7adc0c0bbe" class="toc-h3 toc-link" data-title="三级目录">三级目录</a>
                               <ul class="toc-list-h4">
                                   <li>
-                                    <a href="#four" class="toc-h4 toc-link" data-title="four">four</a>
+                                    <a href="#a5820edee3" class="toc-h4 toc-link" data-title="四级目录">四级目录</a>
                                   </li>
                               </ul>
                           </li>
@@ -347,6 +347,19 @@
           </li>
           <li>
             <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
+          </li>
+          <li>
+            <a href="#e4ea62f6c7" class="toc-h1 toc-link" data-title="测试部署">测试部署</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#71dd9263e9" class="toc-h2 toc-link" data-title="分文件">分文件</a>
+                      <ul class="toc-list-h3">
+                          <li>
+                            <a href="#test-md-includes-index-html-md" class="toc-h3 toc-link" data-title="要把test.md放到includes文件夹，然后在index.html.md中添加">要把test.md放到includes文件夹，然后在index.html.md中添加</a>
+                          </li>
+                      </ul>
+                  </li>
+              </ul>
           </li>
           <li>
             <a href="#accounts" class="toc-h1 toc-link" data-title="accounts">accounts</a>
@@ -361,16 +374,16 @@
             <a href="#requests-authentication" class="toc-h1 toc-link" data-title="requests-authentication">requests-authentication</a>
           </li>
           <li>
-            <a href="#3801286cb3" class="toc-h1 toc-link" data-title="一级目录">一级目录</a>
+            <a href="#one" class="toc-h1 toc-link" data-title="one">one</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#cc07401a0b" class="toc-h2 toc-link" data-title="二级目录">二级目录</a>
+                    <a href="#two" class="toc-h2 toc-link" data-title="two">two</a>
                       <ul class="toc-list-h3">
                           <li>
-                            <a href="#7adc0c0bbe" class="toc-h3 toc-link" data-title="三级目录">三级目录</a>
+                            <a href="#three" class="toc-h3 toc-link" data-title="three">three</a>
                               <ul class="toc-list-h4">
                                   <li>
-                                    <a href="#a5820edee3" class="toc-h4 toc-link" data-title="四级目录">四级目录</a>
+                                    <a href="#four" class="toc-h4 toc-link" data-title="four">four</a>
                                   </li>
                               </ul>
                           </li>
@@ -437,7 +450,7 @@
 <td>token, 详细请见实例代码</td>
 </tr>
 </tbody></table>
-<h1 id='one'>one</h1><h2 id='two'>two</h2><h3 id='three'>three</h3><h4 id='four'>four</h4><h1 id='errors'>Errors</h1>
+<h1 id='3801286cb3'>一级目录</h1><h2 id='cc07401a0b'>二级目录</h2><h3 id='7adc0c0bbe'>三级目录</h3><h4 id='a5820edee3'>四级目录</h4><h1 id='errors'>Errors</h1>
 <p>The Wisdom Garden API uses the following error codes:</p>
 
 <table><thead>
@@ -491,7 +504,15 @@
 <td>Service Unavailable -- We&#39;re temporarily offline for maintenance. Please try again later.</td>
 </tr>
 </tbody></table>
-<h1 id='accounts'>accounts</h1><h1 id='accounts-authentication'>accounts-authentication</h1><h1 id='requests'>requests</h1><h1 id='requests-authentication'>requests-authentication</h1><h1 id='3801286cb3'>一级目录</h1><h2 id='cc07401a0b'>二级目录</h2><h3 id='7adc0c0bbe'>三级目录</h3><h4 id='a5820edee3'>四级目录</h4>
+<h1 id='e4ea62f6c7'>测试部署</h1><h3 id='71dd9263e9'>分文件</h3><h4 id='test-md-includes-index-html-md'>要把test.md放到includes文件夹，然后在index.html.md中添加</h4>
+<p><code>
+includes: <br/>
+&nbsp;&nbsp;- test<br>
+</code></p>
+
+<p>注意如果不要加后缀 .md, 如果文件名中有下划线，如_test.md,那么忽略掉下划线，<br>
+还是添加上面内容</p>
+<h1 id='accounts'>accounts</h1><h1 id='accounts-authentication'>accounts-authentication</h1><h1 id='requests'>requests</h1><h1 id='requests-authentication'>requests-authentication</h1><h1 id='one'>one</h1><h2 id='two'>two</h2><h3 id='three'>three</h3><h4 id='four'>four</h4>
       </div>
       <div class="dark-box">
           <div class="lang-selector">
