--- a/index.html
+++ b/index.html
@@ -370,18 +370,6 @@
               </ul>
           </li>
           <li>
-            <a href="#accounts" class="toc-h1 toc-link" data-title="accounts">accounts</a>
-          </li>
-          <li>
-            <a href="#accounts-authentication" class="toc-h1 toc-link" data-title="accounts-authentication">accounts-authentication</a>
-          </li>
-          <li>
-            <a href="#requests" class="toc-h1 toc-link" data-title="requests">requests</a>
-          </li>
-          <li>
-            <a href="#requests-authentication" class="toc-h1 toc-link" data-title="requests-authentication">requests-authentication</a>
-          </li>
-          <li>
             <a href="#one" class="toc-h1 toc-link" data-title="one">one</a>
               <ul class="toc-list-h2">
                   <li>
@@ -469,7 +457,7 @@ includes: <br/>
 
 <p>注意如果不要加后缀 .md, 如果文件名中有下划线，如_test.md,那么忽略掉下划线，<br>
 还是添加上面内容</p>
-<h1 id='accounts'>accounts</h1><h1 id='accounts-authentication'>accounts-authentication</h1><h1 id='requests'>requests</h1><h1 id='requests-authentication'>requests-authentication</h1><h1 id='one'>one</h1><h2 id='two'>two</h2><h3 id='three'>three</h3>
+<h1 id='one'>one</h1><h2 id='two'>two</h2><h3 id='three'>three</h3>
 <p>注意如果不要加后缀 .md, 如果文件名中有下划线，如_test.md,那么忽略掉下划线，<br>
 还是添加上面内容
 注意如果不要加后缀 .md, 如果文件名中有下划线，如_test.md,那么忽略掉下划线，<br>
